# intelaish

./: README.md  data.csv  dummy_data.csv  messy_data.csv  my_data_dashboard.html  pyproject.toml  test_run.py
intelaish/: __init__.py  cleaning.py  explain.py  ingestion.py  insights.py  models.py  report.py  sql_engine.py  visuals.py
intelaish.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
